syntax = "proto3";

option csharp_namespace = "LIN.MSA.GrpcService";

package Greet;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply);

  rpc Register (RegisterRequest) returns (RegisterReply);

  rpc FindService (FindRequest) returns (FindReply);
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings.
message HelloReply {
  string message = 1;
}

message RegisterRequest{
	string data = 1;
}

message RegisterReply {
  string message = 1;
}

message FindRequest{
	string data = 1;
}

message FindReply {
  string message = 1;
}